# reasonkit-web

./: .gitignore  CHANGELOG.md  CLAUDE-RS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
benches/: capture_bench.rs
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  DIAGRAM_SPECS.md  SECURITY_AUDIT.md  setup.md
examples/: quick-start-web.rs
extension/: background.js  content-script.js  manifest.json  popup.html  popup.js
scripts/: README.md
src/: cors.rs  error.rs  gear.rs  lib.rs  main.rs  metrics.rs  security.rs
src/browser/: capture.rs  controller.rs  mod.rs  navigation.rs  stealth.rs
src/extraction/: content.rs  links.rs  metadata.rs  mod.rs
src/handlers/: status.rs
src/mcp/: mod.rs  server.rs  tools.rs  types.rs
src/stripe/: events.rs  mod.rs  processor.rs
src/web/: __init__.py  server.py
src/web/gear/: __init__.py  capture.py  sonar.py
src/web/gear/assessment/: __init__.py  vibe_engine.py
src/web/gear/blackbox/: recorder.py
src/web/gear/browser/: __init__.py  manager.py
src/web/gear/density/: distill.py
src/web/gear/employee/: __init__.py  digital_employee.py
src/web/gear/render3d/: __init__.py  engine.py
src/web/gear/semantic/: mapper.py
src/web/gear/stealth/: navigator.py
src/web/gear/triangulate/: engine.py
src/web/gear/visual/: freezer.py
src/web/storage/: __init__.py
systemd/: README.md
tests/: README.md  browser_tests.rs  cross_crate_integration_tests.rs  extraction_tests.rs  mcp_tests.rs  proptest_mcp.rs  test_digital_employee.py  wasm_browser_tests.rs  wasm_test_utils.rs
