[package]
name = "reasonkit-web"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
authors = ["ReasonKit Team <team@reasonkit.sh>"]
description = "Web sensing and browser automation layer for ReasonKit - MCP sidecar with headless browser control"
license = "Apache-2.0"
repository = "https://github.com/reasonkit/reasonkit-web"
homepage = "https://reasonkit.sh"
documentation = "https://docs.rs/reasonkit-web"
readme = "README.md"
keywords = ["mcp", "browser", "automation", "web-sensing", "headless-browser"]
categories = ["web-programming", "api-bindings"]

include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "reasonkit_web"
path = "src/lib.rs"

[[bin]]
name = "reasonkit-web"
path = "src/main.rs"

[dependencies]
# Browser automation
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3"

[features]
default = []
# Enable full stealth mode (additional anti-detection)
full-stealth = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
