[package]
name = "reasonkit-web"
version = "0.1.3"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["ReasonKit Team <team@reasonkit.sh>"]
description = "High-performance MCP server for browser automation, web capture, and content extraction. Rust-powered CDP client for AI agents."
repository = "https://github.com/reasonkit/reasonkit-web"
homepage = "https://reasonkit.sh"
documentation = "https://docs.rs/reasonkit-web"
readme = "README.md"
keywords = ["mcp", "browser-automation", "headless", "cdp", "web-scraping"]
categories = ["web-programming", "web-programming::http-server", "development-tools::testing", "asynchronous"]

# Exclude large assets from crates.io package
include = [
    "/src/**/*",
    "/benches/**/*",
    "/examples/**/*",
    "/config/**/*",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CDP/Browser automation
chromiumoxide = { version = "0.8", features = ["tokio-runtime"] }

# MCP server
rmcp = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# WASM support (optional; enabled via `wasm` feature)
wasm-bindgen = { version = "0.2", optional = true }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTML/Content processing
scraper = "0.21"
html5ever = "0.29"
base64 = "0.22.1"
futures = "0.3.31"
regex = "1.12.2"
rand = "0.9.2"
htmlescape = "0.3"

# Web framework
axum = "0.7"
http = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
hyper = "1"

# Handlers dependencies
metrics = "0.24"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
hdrhistogram = "7"
parking_lot = "0.12"
sysinfo = "0.33"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"



# WASM browser testing dependencies
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "DomTokenList",
    "CssStyleDeclaration",
    "Storage",
    "Navigator",
    "Location",
    "Performance",
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "MouseEvent",
    "MouseEventInit",
    "AbortController",
    "AbortSignal",
]}

[[bin]]
name = "rk-web"
path = "src/main.rs"

[lib]
name = "reasonkit_web"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "capture_bench"
harness = false

[features]
default = []
full = ["stealth", "screenshots"]
stealth = []
screenshots = []
wasm = ["dep:wasm-bindgen"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "DomTokenList",
    "CssStyleDeclaration",
    "Storage",
    "Navigator",
    "Location",
    "Performance",
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "MouseEvent",
    "MouseEventInit",
    "AbortController",
    "AbortSignal",
]}

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1
